--- a/tth-client/src/app/shared/header/header.component.scss
+++ b/tth-client/src/app/shared/header/header.component.scss
@@ -100,7 +100,7 @@
             @include transition(transform 0.5s ease);
             overflow: hidden;
             z-index: 1;
-            background-color: #6ec1c5; 
+            background-color: #202020;
             .navbar-navigation-link {   
                 font-style: italic;
                 font-size: 2em;
