--- a/tth-client/src/app/sites/courses/course-details/course-details.component.html
+++ b/tth-client/src/app/sites/courses/course-details/course-details.component.html
@@ -1,7 +1,9 @@
 <div class="course-details-component" *ngIf="course">
   <app-image-slider [images]='[course.image]' [listid]='coursesListShortId'></app-image-slider>
-  <div class="course-details-content-container">
-    <h1 class="course-title" [innerHTML]="course.title"></h1>
-    <div class="course-description" [innerHTML]="course.description"></div>
+  <div class="course-details-content-container main-content-container main-content-container-padding">
+    <div class="main-content"> 
+      <h1 class="course-title" [innerHTML]="course.title"></h1>
+      <div class="course-description" [innerHTML]="course.description"></div>
+    </div>
   </div>
 </div>
