--- a/tth-client/src/app/sites/courses/courses.component.html
+++ b/tth-client/src/app/sites/courses/courses.component.html
@@ -4,14 +4,12 @@
     </div>
 </div>
 <app-courses-overview></app-courses-overview>
-<div class="content">
-  <h2>&Uuml;bersicht</h2>
-</div>
-<div class="content" [innerHTML]='text'>
-  
-</div>
-<div class="content">
-  <h2>vollst&auml;ndige Stundenpl&auml;ne</h2>
-  <object type="application/pdf" data="assets/StundenplanMKG.pdf" class="schedule"></object>
-  <object type="application/pdf" data="assets/StundenplanLB.pdf" class="schedule"></object>
+<div class="courses-content-container main-content-container main-content-container-padding">
+  <div class="courses-content main-content">
+    <h2>&Uuml;bersicht</h2>
+    <div class="courses-gerneral-description" [innerHTML]='text'></div>
+    <h2>vollst&auml;ndige Stundenpl&auml;ne</h2>
+    <object type="application/pdf" data="assets/StundenplanMKG.pdf" class="schedule"></object>
+    <object type="application/pdf" data="assets/StundenplanLB.pdf" class="schedule"></object>
+  </div>
 </div>
