--- a/tth-client/src/app/sites/team/team.component.html
+++ b/tth-client/src/app/sites/team/team.component.html
@@ -3,22 +3,24 @@
     <h1>Team</h1>
   </div>
 </div>
-<div class="team-container">
-  <div *ngFor="let teacher of teachers" class="team-member-container">
-    <div class="team-member-card">
-      <div class="team-member-bg-container" [ngStyle]="getBackgroundStyle(teacher.image)">
-        <div class="team-member-bg-mask">
-        </div>
-        <div class="team-member-about-me-tag">
-            &Uuml;ber Mich
+<div class="team-content-container main-content-container main-content-container-padding">
+  <div class="team-content main-content">
+    <div *ngFor="let teacher of teachers" class="team-member-container">
+      <div class="team-member-card">
+        <div class="team-member-bg-container" [ngStyle]="getBackgroundStyle(teacher.image)">
+          <div class="team-member-bg-mask">
           </div>
-      </div>
-      <div class="team-member-tag">
-        <div class="team-member-tag-name" [innerHTML]="teacher.name">
-
+          <div class="team-member-about-me-tag">
+              &Uuml;ber Mich
+            </div>
         </div>
-        <div class="team-member-tag-task" [innerHTML]="teacher.task">
-            
+        <div class="team-member-tag">
+          <div class="team-member-tag-name" [innerHTML]="teacher.name">
+
+          </div>
+          <div class="team-member-tag-task" [innerHTML]="teacher.task">
+              
+          </div>
         </div>
       </div>
     </div>
