--- a/tth-client/src/app/sites/team/team.component.scss
+++ b/tth-client/src/app/sites/team/team.component.scss
@@ -1,89 +1,93 @@
 @import '../../../variables';
 @import '../../../mixins';
 
-.team-container {
-    width: 100%;
-    margin: 50px 0;
-    @include flexbox();
-    @include flex-wrap(wrap);
-    .team-member-container {
+.team-content-container {
+    background-color: $main-background-color-dark;
+    .team-content {
         width: 100%;
-        position: relative;
-        padding: 20px;
-        .team-member-card {
-            @include flexbox();
-            @include flex-direction(column);
-            display: relative;
-            width: 320px;
-            margin: 0 auto;
-            background-color: #F6F5F5;
-            overflow: hidden;
-            .team-member-bg-container {
-                height: 300px;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        @include flexbox();
+        @include flex-wrap(wrap);
+        .team-member-container {
+            width: 100%;
+            position: relative;
+            padding: 20px;
+            .team-member-card {
+                @include flexbox();
+                @include flex-direction(column);
+                display: relative;
                 width: 320px;
-                background-color: grey;
-                background-size: cover;
-                @include flexbox();
-                @include flex-direction(column);
-                align-items: center;
-                justify-content: center;
-                position: relative;
-                filter: blur(0px);                
-                @include transition(
-                    filter 0.2s ease-in-out             
-                );
-                .team-member-bg-mask {
-                    width: 320px;
-                    height: 100%;
-                    top: 0;
-                    background-color: transparent;
-                    position: absolute;
-                    @include transition(
-                        background-color 0.2s ease-in-out
-                    );
-                }
-                .team-member-about-me-tag {
-                    text-align: center;
-                    opacity: 0;
-                    color: #fff;
-                    padding: 10px 20px;
-                    background-color: $accent-color-1;
-                    z-index: 1;
-                    text-transform: uppercase;
-                    font-size: 20px;
-                    @include transition(
-                        opacity 0.2s ease-in-out
-                    );
-                }
-            }
-            .team-member-tag {
-                width: 300px;
-                height: 100px;
+                margin: 0 auto;
+                background-color: #F6F5F5;
                 overflow: hidden;
-                text-align: center;
-                padding: 10px;
-                @include flexbox();
-                @include flex-direction(column);
-                .team-member-tag-name {
-                    font-size: 22px;
-                    line-height: 24px;
-                    font-weight: 600;
-                    font-style: italic;
-                    text-transform: uppercase;
-                }
-                .team-member-tag-task {
-                    font-size: 12px;
-                }
-            }
-            &:hover {
-                cursor: pointer;
                 .team-member-bg-container {
-                    //filter: blur(4px);                    
+                    height: 300px;
+                    width: 320px;
+                    background-color: grey;
+                    background-size: cover;
+                    @include flexbox();
+                    @include flex-direction(column);
+                    align-items: center;
+                    justify-content: center;
+                    position: relative;
+                    filter: blur(0px);                
+                    @include transition(
+                        filter 0.2s ease-in-out             
+                    );
                     .team-member-bg-mask {
-                        background-color: rgba(#000, 0.8);
+                        width: 320px;
+                        height: 100%;
+                        top: 0;
+                        background-color: transparent;
+                        position: absolute;
+                        @include transition(
+                            background-color 0.2s ease-in-out
+                        );
                     }
                     .team-member-about-me-tag {
-                        opacity: 1;
+                        text-align: center;
+                        opacity: 0;
+                        color: #fff;
+                        padding: 10px 20px;
+                        background-color: $accent-color-1;
+                        z-index: 1;
+                        text-transform: uppercase;
+                        font-size: 20px;
+                        @include transition(
+                            opacity 0.2s ease-in-out
+                        );
+                    }
+                }
+                .team-member-tag {
+                    width: 300px;
+                    height: 100px;
+                    overflow: hidden;
+                    text-align: center;
+                    padding: 10px;
+                    @include flexbox();
+                    @include flex-direction(column);
+                    .team-member-tag-name {
+                        font-size: 22px;
+                        line-height: 24px;
+                        font-weight: 600;
+                        font-style: italic;
+                        text-transform: uppercase;
+                    }
+                    .team-member-tag-task {
+                        font-size: 12px;
+                    }
+                }
+                &:hover {
+                    cursor: pointer;
+                    .team-member-bg-container {
+                        //filter: blur(4px);                    
+                        .team-member-bg-mask {
+                            background-color: rgba(#000, 0.8);
+                        }
+                        .team-member-about-me-tag {
+                            opacity: 1;
+                        }
                     }
                 }
             }
@@ -91,35 +95,53 @@
     }
 }
 
-@media (min-width: 650px){
-    .team-container { 
-        .team-member-container {
-            width: 49%;
-            padding: 20px 0;
-            .team-member-card {
-                .team-member-bg-container {
+@media (min-width: $media-breakpoint-md){
+    .team-content-container {
+        .team-content { 
+            .team-member-container {
+                width: 49%;
+                padding: 20px 0;
+                margin: 0;
+                .team-member-card {
+                    margin: 0;
                 }
-                .team-member-tag {
+                &:nth-child(odd) {
+                    .team-member-card {
+                        float: left;
+                    }
+                }
+                &:nth-child(even) {
+                    .team-member-card {
+                        float: right;
+                    }
                 }
             }
         }
     }
 }
 
-@media (min-width: 1000px){
-    .team-container { 
-        .team-member-container {
-            width: 33.3%;
-        }
-    }
-}
-
-@media (min-width: 1400px){
-    .team-container { 
-        max-width: 1400px;
-        margin: 0 auto;
-        .team-member-container {
-            width: 24%;
+@media (min-width: $media-breakpoint-lg) {
+    .team-content-container {
+        .team-content { 
+            .team-member-container {
+                width: 33.3%;
+                &:nth-child(3n+1) {
+                    .team-member-card {
+                        float: left;
+                    }
+                }
+                &:nth-child(3n+2) {
+                    .team-member-card {
+                        float: initial;
+                        margin: 0 auto;
+                    }
+                }
+                &:nth-child(3n) {
+                    .team-member-card {
+                        float: right;
+                    }
+                }
+            }
         }
     }
 }
