--- a/tth-client/src/variables.scss
+++ b/tth-client/src/variables.scss
@@ -8,6 +8,7 @@ $main-text-color: #F6F5F5;
 $main-text-color-on-dark-bg: #fff;
 $post-seperator-color: #8C8C8C;
 $accent-color-1: #eb484d;
+$main-background-color-dark: #000000;
 
 /*---------------------------
 |   RESPONSIVE BREAKPOINTS  |
