--- a/tth-client/src/app/shared/header/header.component.html
+++ b/tth-client/src/app/shared/header/header.component.html
@@ -1,4 +1,5 @@
-<div class="navbar" [ngClass]="isMobileNavOpen === true ? 'mobile-nav-open': ''">
+<div class="navbar-container main-content-container main-content-container-padding"> 
+  <div class="navbar main-content" [ngClass]="isMobileNavOpen === true ? 'mobile-nav-open': ''">
     <div routerLink="/" class="logo-container">
       <div class="logo"></div>
       <div class="logo-label-container">
@@ -39,3 +40,4 @@
       </a>
     </div>
   </div>
+</div>
