--- a/tth-client/src/app/sites/locations/locations.component.scss
+++ b/tth-client/src/app/sites/locations/locations.component.scss
@@ -1,1 +1,14 @@
 @import './../stage/stage.component';
+@import './../../courses-overview/courses-overview.component';
+
+@media (min-width: $media-breakpoint-md) {
+    .courses-overview {
+        .course-tags-container {
+            .course-tags {     
+                .course-tag-container {
+                    width: 47.9%;
+                }
+            }
+        }
+    }
+}
