:lipstick: Autoplay, loop and hidden controls for title video

--- a/tth-client/src/app/main-page/main-page.component.html
+++ b/tth-client/src/app/main-page/main-page.component.html
@@ -1,5 +1,6 @@
 <div class="main-page-title-video-container">
-    <iframe [src]="getSafeUrl(video)" frameborder="0" allowfullscreen></iframe>
+    <div id="video-iframe" class="video-iframe"></div>
+    <div class="video-overlay" [ngClass]="videoLoaded === true  ? 'hide' : ''"></div>
 </div>
 <app-main-page-section *ngIf="philosophySection" [sectiondata]='philosophySection'></app-main-page-section>
 <app-main-page-section *ngIf="coursesSection" [sectiondata]='coursesSection'></app-main-page-section>
@@ -7,3 +8,4 @@
 <app-main-page-section *ngIf="performancesSection" [sectiondata]='teamSection'></app-main-page-section>
 <app-main-page-section *ngIf="locationsSection" [sectiondata]='locationsSection'></app-main-page-section>
 <app-main-page-section *ngIf="contactSection" [sectiondata]='contactSection'></app-main-page-section>
+
