--- a/tth-client/src/app/sites/courses/course-details/course-details.component.html
+++ b/tth-client/src/app/sites/courses/course-details/course-details.component.html
@@ -1,9 +1,7 @@
-<div class="course-details-component" *ngIf="course">
-  <app-image-slider [images]='[course.image]' [listid]='coursesListShortId'></app-image-slider>
-  <div class="course-details-content-container main-content-container main-content-container-padding">
-    <div class="main-content"> 
-      <h1 class="course-title" [innerHTML]="course.title"></h1>
-      <div class="course-description" [innerHTML]="course.description"></div>
-    </div>
+<app-header-image [image]='course.image' [listId]='coursesListShortId' [title]='course.title' *ngIf="course"></app-header-image>
+<div class="course-details-content-container main-content-container main-content-container-padding" *ngIf="course">
+  <div class="main-content"> 
+    <div class="course-description" [innerHTML]="course.description"></div>
   </div>
 </div>
+<app-image-slider [images]='[course.image]' [listid]='coursesListShortId' *ngIf="course"></app-image-slider>
