--- a/tth-client/src/styles.scss
+++ b/tth-client/src/styles.scss
@@ -48,6 +48,19 @@ app-current {
     padding-right: 20px; 
 }
 
+/*************
+* ANIMATIONS *
+**************/
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 @media (min-width: $media-breakpoint-md) {
     .main-content-container {
         .main-content {
