:lipstick: Change language for labels to german

--- a/tth-client/src/app/shared/footer/footer.component.html
+++ b/tth-client/src/app/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="footer-section-container">
       <div class="footer-section footer-section-contact">
         <div class="footer-section-heading">
-          Contact
+          Kontakt
         </div>
         <div class="footer-section-content" *ngIf="locationMG && email">
           <span class="footer-section-content-link">{{locationMG.addressName}}</span>
@@ -24,7 +24,7 @@
     <div class="footer-section-container">
       <div class="footer-section footer-section-social">
         <div class="footer-section-heading">
-            Social
+            Social Media
           </div>
         <div class="footer-section-content">    
           <a class="footer-section-content-link" href="#">
@@ -39,11 +39,11 @@
     <div class="footer-section-container">
       <div class="footer-section footer-section-legal">
         <div class="footer-section-heading">
-            Disclaimer
+            Impressum
         </div>
         <div class="footer-section-content">  
-          <div class="footer-section-content-link">Copyright by Tanztheater Anita Hanke 2017</div>
-          <div class="footer-section-content-link">Designed by Niko Reschke and Yasmin Hollenbenders</div>
+          <div class="footer-section-content-link">Geschützt durch Tanztheater Anita Hanke 2017</div>
+          <div class="footer-section-content-link">Web Design: Niko Reschke and Yasmin Hollenbenders</div>
         </div>
       </div>
     </div>
