--- a/tth-client/src/app/courses-overview/courses-overview.component.scss
+++ b/tth-client/src/app/courses-overview/courses-overview.component.scss
@@ -119,7 +119,12 @@
             }
         }
         .course-tags-container {
-            padding: 20px 40px;       
+            padding: 20px 40px;   
+            opacity: 0;
+            animation-name: fade-in;
+            animation-duration: 1s;
+            animation-timing-function: ease;
+            animation-fill-mode: forwards;  
             .course-tags {     
                 .course-tag-container {
                     width: 31.33%;
