--- a/tth-client/src/app/sites/team/team.component.scss
+++ b/tth-client/src/app/sites/team/team.component.scss
@@ -103,6 +103,12 @@
                 width: 49%;
                 padding: 20px 0;
                 margin: 0;
+                opacity: 0;
+                animation-name: fade-in;
+                animation-delay: 1.3s;
+                animation-duration: 0.7s;
+                animation-timing-function: ease;
+                animation-fill-mode: forwards;
                 .team-member-card {
                     margin: 0;
                 }
