:lipstick: Change more labels to german

--- a/tth-client/src/app/shared/header/header.component.html
+++ b/tth-client/src/app/shared/header/header.component.html
@@ -24,7 +24,7 @@
         Kurse
       </a> 
       <a class="navbar-navigation-link" routerLink="/aktuelles" (click)="toggleMobileNav()">
-        Neuigkeiten
+        Aktuelles
       </a>
       <a class="navbar-navigation-link" routerLink="/auftritte" (click)="toggleMobileNav()">
         Auftritte
