:art: Separate header image and gallery for locations

--- a/tth-client/src/app/sites/locations/locations.component.html
+++ b/tth-client/src/app/sites/locations/locations.component.html
@@ -1,6 +1,6 @@
 <div class="courses-overview">
   <div class="courses-overview-bg-images-mask">
-    <div *ngFor="let location of locations" class="courses-overview-bg-image-container" [ngStyle]="getBackgroundStyle(location.gallery[0])">
+    <div *ngFor="let location of locations" class="courses-overview-bg-image-container" [ngStyle]="getBackgroundStyle(location.image)">
       <div class="courses-overview-bg-image-fade">
 
       </div>
