:lipstick: Fix transition between courses-overview and course-details

--- a/tth-client/src/app/courses-overview/courses-overview.component.scss
+++ b/tth-client/src/app/courses-overview/courses-overview.component.scss
@@ -103,7 +103,10 @@
                 top: 0;
                 width: 100%;
                 height: 100%;
+                background-attachment: fixed;
                 background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
                 opacity: 0;            
                 @include transform(translateX(0px) translateY(100%));
                 @include transition(opacity 500ms ease, transform 250ms);
