:lipstick: Fix text color

--- a/tth-client/src/app/sites/courses/courses.component.scss
+++ b/tth-client/src/app/sites/courses/courses.component.scss
@@ -4,6 +4,7 @@
     background-color: $main-text-color;
     padding-top: 20px;
     padding-bottom: 20px;
+    color: $main-text-color-on-light-bg;
 
     .schedule {
         width:100%;
